--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.74.4",
+    "axios": "^1.8.4",
     "framer-motion": "^12.7.4",
     "motion": "^12.7.4",
     "react": "^19.0.0",
