--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "@radix-ui/react-slot": "^1.2.2",
         "@reduxjs/toolkit": "^2.8.2",
         "@tailwindcss/vite": "^4.1.6",
+        "@typescript-eslint/eslint-plugin": "^8.33.0",
         "axios": "^1.9.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^12.10.5",
+        "gsap": "^3.13.0",
         "lucide-react": "^0.509.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
@@ -26,6 +28,7 @@
         "react-icons": "^5.5.0",
         "react-redux": "^9.2.0",
         "react-router": "^7.6.0",
+        "react-toastify": "^11.0.5",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.6",
         "zod": "^3.24.4"
