feat: update dependencies, add carousel and card components, and enhance Packages page layout

--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "dependencies": {
         "@hookform/resolvers": "^5.0.1",
         "@radix-ui/react-label": "^2.1.6",
-        "@radix-ui/react-slot": "^1.2.2",
+        "@radix-ui/react-slot": "^1.2.3",
         "@reduxjs/toolkit": "^2.8.2",
         "@tailwindcss/vite": "^4.1.6",
         "@typescript-eslint/eslint-plugin": "^8.33.0",
         "axios": "^1.9.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "embla-carousel-autoplay": "^8.6.0",
+        "embla-carousel-react": "^8.6.0",
         "framer-motion": "^12.10.5",
         "gsap": "^3.13.0",
         "lucide-react": "^0.509.0",
